--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "UnbrallaFish",
   "license": "ISC",
   "devDependencies": {
+    "babel-polyfill": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.12.3",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^1.3.0",
@@ -30,9 +33,11 @@
     "webpack": "^1.13.0"
   },
   "dependencies": {
+    "co": "^4.6.0",
     "jquery": "^2.2.3",
     "lodash": "^4.11.1",
     "purecss": "^0.6.0",
+    "thunkify": "^2.1.2",
     "vue": "^1.0.21",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.13"
