完善图片，脚本的打包，可以指定多个脚本

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-webpack-sourcemaps": "^0.3.0",
     "imagemin-pngquant": "^5.0.0",
     "optimist": "^0.6.1",
+    "vinyl-named": "^1.1.0",
     "webpack": "^1.13.0"
   },
   "dependencies": {
