--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
+    "gulp-base64": "^0.1.3",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
+    "gulp-csslint": "^0.3.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-htmlmin": "^1.3.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
     "gulp-sass": "^2.3.1",
+    "gulp-sass-lint": "^1.1.1",
     "gulp-stream": "^0.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-webpack": "^1.5.0",
