--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "UnbrallaFish",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.9.0",
     "browser-sync": "^2.12.3",
+    "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "easy-reload": "^0.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
@@ -36,7 +43,12 @@
     "imagemin-pngquant": "^5.0.0",
     "optimist": "^0.6.1",
     "vinyl-named": "^1.1.0",
-    "webpack": "^1.13.0"
+    "vue-hot-reload-api": "^1.3.2",
+    "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.4.0",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "co": "^4.6.0",
