--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
-    "gulp-sass": "^2.3.1",
     "gulp-sass-lint": "^1.1.1",
     "gulp-stream": "^0.0.2",
     "gulp-uglify": "^1.5.3",
@@ -52,6 +51,7 @@
   },
   "dependencies": {
     "co": "^4.6.0",
+    "gulp-replace": "^0.5.4",
     "jquery": "^2.2.3",
     "lodash": "^4.11.1",
     "purecss": "^0.6.0",
